<resources>
    <string name="app_name">TMCWD</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="sign_in">Sign-In</string>
    <string name="forgot_password"><a href="https://www.google.com">Forgot Password?</a></string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="sign_in_button_was_clicked">Sign-In button was clicked!!!</string>
</resources>