<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_frame_border"
        android:padding="20dp"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints,RtlHardcoded">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/tmcwd_logo"
            android:layout_gravity="center"
            android:importantForAccessibility="no"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/lblUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:labelFor="@+id/txtUsername"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:labelFor="@+id/lblUsername"
            android:layout_height="wrap_content"
            android:autofillHints="@string/username"
            android:background="@drawable/edit_text_frame"
            android:layout_marginBottom="8dp"
            android:inputType="text" />

        <TextView
            android:id="@+id/lblPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:padding="5dp"
            android:labelFor="@+id/lblUsername"
            android:layout_height="wrap_content"
            android:autofillHints="@string/username"
            android:background="@drawable/edit_text_frame"
            android:layout_marginBottom="8dp"
            android:inputType="textPassword" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:layout_marginRight="20dp"
            tools:ignore="UselessLeaf">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/remember_me"
                android:checked="true"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/lnkForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="right"
                android:linksClickable="true"
                android:autoLink="web"
                android:text="@string/forgot_password"/>

        </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            tools:ignore="UselessLeaf">

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sign_in" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>